Small refactoring of the furniture views.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/Created.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Created.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edited";
 }
 
-<h1>The @Model.Name was edited successfully!</h1>
+<h1>The @Model.Name was created successfully!</h1>
 
 <p>
     <a asp-action="Index">Home page</a>
