--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="CreatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Edit" class="btn btn-primary" />
             </div>
         </form>
     </div>
