Removed Edit button from viewing furniture details as regular user.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Furnitures.Furniture
+﻿@model Application.Furnitures.FurnitureModel
 
 @{
     ViewData["Title"] = "Details";
@@ -31,6 +31,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
