Changed the namespace for the proper model for this view.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/Index.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Furnitures.Furniture>
+﻿@model IEnumerable<Application.Furnitures.FurnitureModel>
 
 @{
     ViewData["Title"] = "Here are the existing furnitures";
