Small typo fix.

--- a/ClnArchMVCApp/Presentation/Views/User/Created.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Created.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Domain.Users.User
 @{
-    ViewData["Title"] = "Edited";
+    ViewData["Title"] = "Created";
 }
 
 <h1>The @Model.Firstname was created successfully!</h1>
