Modification of views so they can properly show QUantity field.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/Edited.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Edited.cshtml
@@ -5,3 +5,7 @@
 
 <h1>The @Model.Name was edited successfully!</h1>
 
+<div>
+    <a asp-action="FurnitureAdminMenu" asp-controller="User">Back to List</a>
+</div>
+
