--- a/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
@@ -28,8 +28,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantity)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Quantity)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller= "Furniture">Back to List</a>
 </div>
