--- a/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Furnitures.Furniture
+﻿@model Application.Furnitures.FurnitureModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -29,6 +29,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -36,6 +41,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="FurnitureAdminMenu" asp-controller="User">Back to List</a>
 </div>
 
