Refactoring of the views, removing the delete and edit links or Admins. inside User list menu.

--- a/ClnArchMVCApp/Presentation/Views/User/ErrorPage.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/ErrorPage.cshtml
@@ -1,4 +1,4 @@
-﻿h1>Something went wrong. Please, try again, somehow!</h1>
+﻿<h1>Something went wrong. Please, try again, somehow!</h1>
 <p>
     <a asp-action="UserAdminMenu">Back to the Admin menu</a>
 </p>
