--- a/ClnArchMVCApp/Presentation/Views/User/Details.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Details.cshtml
@@ -43,6 +43,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    @if (Model.IsAdmin == false)
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
+    }
+    
     <a asp-action="UserAdminMenu">Back to List</a>
 </div>
