Added the quantity field for the furniture admin menu view. Fixed the proper back link to the views Created and Deleted, since they could send you to the wrong page.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/Deleted.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Deleted.cshtml
@@ -6,6 +6,6 @@
 <h1>Item successfully deleted!!!</h1>
 
 <p>
-    <a asp-action="Index">Home page</a>
+    <a asp-action="FurnitureAdminMenu" asp-controller="User">Back to the list</a>
 </p>
 
