--- a/ClnArchMVCApp/Presentation/Views/Furniture/Created.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Created.cshtml
@@ -6,5 +6,5 @@
 <h1>The @Model.Name was created successfully!</h1>
 
 <p>
-    <a asp-action="Index">Home page</a>
+    <a asp-action="FurnitureAdminMenu" asp-controller="User">Back to the list</a>
 </p>
