--- a/ClnArchMVCApp/Presentation/Views/User/FurnitureAdminMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/FurnitureAdminMenu.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -44,6 +47,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+             <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit","Furniture" ,new { id=item.Id}) |
