Refactoring the get views and get methods in business logic to retrieve users with dto.

--- a/ClnArchMVCApp/Presentation/Views/User/UserAdminMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/UserAdminMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Users.User>
+﻿@model IEnumerable<Application.Users.UserModel>
 
 @{
     ViewData["Title"] = "Admin menu - Users";
