Refactoring the login controller so that it can adopt the new login model. Also - introduction of pop up message view which can be shared across all pages/ views.

--- a/ClnArchMVCApp/Presentation/Views/User/LoginFail.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/LoginFail.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Login authorization - failed. Please, try again.</h1>
-<p>
-    <a asp-action="Login">Login page</a>
-</p>
+﻿<div>
+    <script asp-fallback-src="">
+                           alert('@Html.Raw(TempData["msg"])')
+                           window.location.href = "User/Login";
+    </script>
+</div>
+
+
