Injection of the new popup creation service in the IoC and modyfing the Delete view so that it can redirect to the proper view.

--- a/ClnArchMVCApp/Presentation/Views/User/AdminInitialMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/AdminInitialMenu.cshtml
@@ -1,8 +1,11 @@
 ﻿<h1>Admin menu - Please choose the next admin menu.</h1>
-<p>
-    <a asp-action="UserAdminMenu">Users menu</a>
-</p>
 
-<p>
-    <a asp-action="FurnitureAdminMenu">Furnitures menu</a>
-</p>
+<div>
+    <p>
+        <a asp-action="UserAdminMenu">Users menu</a>
+    </p>
+
+    <p>
+        <a asp-action="FurnitureAdminMenu">Furnitures menu</a>
+    </p>
+</div>
