Change of usermodel class name in view files.

--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@model Domain.Users.User
+﻿@model Application.Users.CreateUserModel
 
 @{
     ViewData["Title"] = "Create";
-}
 
+}
 <h1>Create</h1>
 
 <h4>User</h4>
