--- a/ClnArchMVCApp/Presentation/Views/User/UserAdminMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/UserAdminMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Application.Users.UserModel>
+﻿@model IEnumerable<Application.Users.CreateUserModel>
 
 @{
     ViewData["Title"] = "Admin menu - Users";
