--- a/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Application.Users.UserModel
+﻿@model Application.Users.CreateUserModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -17,11 +17,6 @@
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Firstname" class="control-label"></label>
