--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -13,9 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                @Html.ValidationMessage("Username")
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
+                
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
