--- a/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
@@ -14,6 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                @Html.ValidationMessage("Username")
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
