Small revisions for page titles in browser tabs. Also removed error page as it is not necessary.

--- a/ClnArchMVCApp/Presentation/Views/Furniture/AdminDetails.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/AdminDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Furnitures.FurnitureModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Admin furniture details";
 }
 
 <h1>Details</h1>
