--- a/ClnArchMVCApp/Presentation/Views/Furniture/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Furnitures.FurnitureModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create furniture";
 }
 
 <h1>Create</h1>
