--- a/ClnArchMVCApp/Presentation/Views/Furniture/Delete.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Furnitures.FurnitureModel    
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete furniture";
 }
 
 <h1>Delete</h1>
