--- a/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Furnitures.FurnitureModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit furniture";
 }
 
 <h1>Edit</h1>
