--- a/ClnArchMVCApp/Presentation/Views/Furniture/Index.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Application.Furnitures.FurnitureModel>
 @{
-    ViewData["Title"] = "Here are the existing furnitures";
+    ViewData["Title"] = "All furnitures";
 }
 
 <h1>Welcome to the online Furniture Shop</h1>
