--- a/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Furnitures.FurnitureModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details for furniture";
 }
 
 <h1>Details</h1>
