Small changes to view tab titles.

--- a/ClnArchMVCApp/Presentation/Views/User/AdminInitialMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/AdminInitialMenu.cshtml
@@ -1,4 +1,9 @@
-﻿<h1>Admin menu - Please choose the next admin menu.</h1>
+﻿@{
+    ViewData["Title"] = "Admin - initial menu";
+
+}
+
+<h1>Admin menu - Please choose the next admin menu.</h1>
 
 <div>
     <p>
