--- a/ClnArchMVCApp/Presentation/Views/User/Delete.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Users.CreateUserModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete user";
 }
 
 <h1>Delete</h1>
