--- a/ClnArchMVCApp/Presentation/Views/User/Details.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Users.CreateUserModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "User details";
 }
 
 <h1>Details</h1>
