--- a/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Users.CreateUserModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "User edit";
 }
 
 <h1>Edit</h1>
