--- a/ClnArchMVCApp/Presentation/Views/User/FurnitureAdminMenu.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/FurnitureAdminMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Application.Furnitures.FurnitureModel>
 
 @{
-    ViewData["Title"] = "Here are the existing furnitures";
+    ViewData["Title"] = "Furniture admin menu";
 }
 
 <h1>Furniture Admin menu</h1>
