--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Application.Users.CreateUserModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create user";
 
 }
 <h1>Create</h1>
