--- a/ClnArchMVCApp/Presentation/wwwroot/css/site.css
+++ b/ClnArchMVCApp/Presentation/wwwroot/css/site.css
@@ -16,3 +16,14 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+<style >
+body {
+    font-family: "Lato", sans-serif
+}
+
+.mySlides {
+    display: none
+}
+
+</style >
