--- a/ClnArchMVCApp/Presentation/Views/Furniture/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Create.cshtml
@@ -24,8 +24,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control" id="Description"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
+                <span class="text-danger" id="warningSpan" style="visibility : collapse"></span>
             </div>
              <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -43,4 +44,22 @@
 <div>
     <a asp-action="FurnitureAdminMenu" asp-controller="User">Back to List</a>
 </div>
+
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+
+    <script>
+
+    $("#Description").keyup(function() {
+        var charLength = $(this).val().length;
+        var charLimit = 150;
+
+          if (charLength < charLimit) {
+            $("#warningSpan").css('visibility', 'visible');
+            $("#warningSpan").text("You have " + (charLimit - charLength) + " characters left.");
+          }
+    });
+    </script>
+}
 
