Added scripts for client-side validation for the user forms.

--- a/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Edit.cshtml
@@ -35,3 +35,8 @@
     <a asp-action="UserAdminMenu">Back to Admin User List</a>
 </div>
 
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
+
