--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -50,3 +50,8 @@
     <a asp-action="UserAdminMenu">Back to List</a>
 </div>
 
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
+
