--- a/ClnArchMVCApp/Presentation/Views/User/Login.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Login.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Login";
 }
+
 <h1>Welcome to furniture shop. Login to use this online page.</h1>
 
 <h4>User details.
@@ -28,5 +29,12 @@
         </form>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
+
+
 
 
