--- a/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/Furniture/Edit.cshtml
@@ -27,6 +27,8 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
+                <br/>
+                <span class="text-danger" id="warningSpan" style="visibility : collapse"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -47,5 +49,18 @@
 @section Scripts{
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+
+     <script>
+    $("#Description").keyup(function() {
+        var charLength = $(this).val().length;
+        var charLimit = $(this).attr("MaxLength");
+
+          if (charLength < charLimit) {
+            $("#warningSpan").css('visibility', 'visible');
+            $("#warningSpan").text("You have " + (charLimit - charLength) + " characters left.");
+          }
+    });
+    </script>
+
 }
 
