--- a/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Create.cshtml
@@ -15,8 +15,9 @@
             <div class="form-group">
                 @Html.ValidationMessage("Username")
                 <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" />
+                <input asp-for="Username" class="form-control" id="Username"/>
                 <span asp-validation-for="Username" class="text-danger"></span>
+                <span class="text-danger" id="usernameCustomSpan" style="visibility : collapse"></span>
                 
             </div>
             <div class="form-group">
@@ -31,12 +32,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Firstname" class="control-label"></label>
-                <input asp-for="Firstname" class="form-control" />
+                <input asp-for="Firstname" class="form-control" id="Firstname"/>
                 <span asp-validation-for="Firstname" class="text-danger"></span>
+                  <span class="text-danger" id="firstnameCustomSpan" style="visibility : collapse"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
+                <input asp-for="CreatedAt" class="form-control"/>
                 <span asp-validation-for="CreatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -53,5 +55,29 @@
 @section Scripts{
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script>
+    $("#Username").keyup(function() {
+        var charLength = $(this).val().length;
+        var charLimit = $(this).attr("MaxLength");
+
+          if (charLength < charLimit) {
+            $("#usernameCustomSpan").css('visibility', 'visible');
+            $("#usernameCustomSpan").text("You have " + (charLimit - charLength) + " characters left.");
+          }
+    });
+    </script>
+
+    <script>
+    $("#Firstname").keyup(function() {
+        var charLength = $(this).val().length;
+        var charLimit = $(this).attr("MaxLength");
+
+          if (charLength < charLimit) {
+            $("#firstnameCustomSpan").css('visibility', 'visible');
+            $("#firstnameCustomSpan").text("You have " + (charLimit - charLength) + " characters left.");
+          }
+    });
+    </script>
+
 }
 
