--- a/ClnArchMVCApp/Presentation/Views/User/Login.cshtml
+++ b/ClnArchMVCApp/Presentation/Views/User/Login.cshtml
@@ -4,31 +4,35 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Welcome to furniture shop. Login to use this online page.</h1>
+<h1 class="text-center">Welcome to furniture shop. Login to use this online page.</h1>
 
-<h4>User details.
+<h4 class="text-center">User details.
     Please enter your account credentials:</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-md-4">
+        <div class="card card-body bg-light">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
+                </br>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+                </br>
             </div>
             <div class="form-group">
-                <input type="submit" value="LOG IN" class="btn btn-primary" />
+                <input type="submit" value="LOG IN" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
 </div>
+ </div>
 
 @section Scripts{
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
